# alex-fsw0-quicksend

./: .env.example  .gitignore  .plan  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: send-form.spec.ts
frontend/src/: App.tsx  api.ts  styles.css  validation.ts
scripts/: build-release.sh
src/: app.rs  config.rs  email.rs  main.rs  models.rs  rate_limit.rs  validation.rs
src/routes/: send.rs
